# cloud-mover

./: .gitignore  README.md  START-CLOUD-MOVER.bat  cloud_mover.py  edit-ignore.bat  refresh-gdrive.bat  test_rclone.py
archive/old_versions/: cloud-mover.pyw  drop-portal.py  drop-zone-move.pyw  drop-zone.pyw  rclone-drop-portal.py  simple-drop-portal.py
archive/rclone-drop-portal/: Cargo.toml  README.md  setup.bat
archive/rclone-drop-portal/src/: cli.rs  main.rs
archive/rclone-drop-portal/templates/: index.html
archive/test_scripts/: MOVE-TO-CLOUD.bat  SAFE-ARCHIVE.bat  START-DROP-ZONE.bat  bulk-upload.bat  drag-drop-upload.bat  smart-upload.bat  start-portal.bat  upload.bat
config/: .rcloneignore
docs/: ARCHITECTURE.md
src/core/: cloud_operations.py  file_operations.py
src/ui/: main_window.py
