[package]
name = "rclone-drop-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI framework for native window
eframe = "0.24"
egui = "0.24"
rfd = "0.12"  # Native file dialogs

# Async runtime
tokio = { version = "1", features = ["full"] }

# File handling
walkdir = "2"
notify = "6"
rayon = "1.8"  # Parallel processing

# Progress and logging  
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System integration
winapi = { version = "0.3", features = ["winuser", "shellapi"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }